<resources>
    <string name="app_name">طوطی شاپ</string>

    <string name="text_tab_house">صفحه اصلی</string>
    <string name="text_tab_category">دسته بندی</string>
    <string name="text_tab_bag">سبد خرید</string>
    <string name="text_tab_user">پنل کاربری</string>
    <string name="text_tab_setting">تنظیمات</string>

    <string name="text_setting_theme">تم برنامه</string>

    <string name="text_house_latest_product">جدیدترین محصولات</string>
    <string name="text_house_rate_product">پریازدیدترین محصولات</string>
    <string name="text_house_popularity_product">محبوبیت محصولات</string>
    <string name="text_house_more_products">بیشتر</string>

    <string name="text_detail_add_product">افزودن</string>



</resources>